--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,7 +35,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.jstl-1.2.jar=C:\\Users\\Matic\\Downloads\\hrmgr\\hrmgr\\lib\\jstl-1.2.jar
+file.reference.jstl-1.2.jar=lib\\jstl-1.2.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
