--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -8,6 +8,14 @@
         <servlet-name>addProduct</servlet-name>
         <servlet-class>ph.pup.itech.grillut.controller.addProduct</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>UserPage</servlet-name>
+        <servlet-class>ph.pup.itech.grillut.controller.UserPage</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>RegisterPage</servlet-name>
+        <servlet-class>ph.pup.itech.grillut.controller.RegisterPage</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LandingPage</servlet-name>
         <url-pattern>/home</url-pattern>
@@ -15,6 +23,14 @@
     <servlet-mapping>
         <servlet-name>addProduct</servlet-name>
         <url-pattern>/products</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>UserPage</servlet-name>
+        <url-pattern>/user</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>RegisterPage</servlet-name>
+        <url-pattern>/customer/registration</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
