--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -25,12 +25,24 @@
         <url-pattern>/products</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
+        <servlet-name>addProduct</servlet-name>
+        <url-pattern>/products/add</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
         <servlet-name>UserPage</servlet-name>
         <url-pattern>/user</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
+        <servlet-name>UserPage</servlet-name>
+        <url-pattern>/user/add</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
         <servlet-name>RegisterPage</servlet-name>
         <url-pattern>/customer/registration</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>RegisterPage</servlet-name>
+        <url-pattern>/customer/registration/add</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
